--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>Title</title>
+    <title>Serial Port Data Convert Tool</title>
     <!--styles-->
     <link rel="stylesheet" href="static/css/bootstrap.css">
     <link rel="stylesheet" href="static/css/main.css">
@@ -20,13 +20,31 @@
 
 <div id="app">
     <div class="container">
-        <h3>Serial Port XXX Tool</h3>
+        <h3>Serial Port Data Convert Tool</h3>
+        <hr>
+        <form class="form-inline" role="form">
+            <div class="form-group">
+                <a class="btn btn-default" @click="clear">清除数据</a>
+            </div>
+
+            <div class="form-group">
+                <div class="input-group">
+                    <div class="input-group-addon">原始数据进制</div>
+                    <input type="number" min="2" max="128" class="form-control" v-model="originalNumberSystem">
+                </div>
+            </div>
+        </form>
         <div class="user-input-container">
-            <textarea class="form-control monospaced-font user-input" rows="3" v-model="userInput"></textarea>
+            <textarea class="form-control monospaced-font user-input" rows="3" v-model="userInput" ></textarea>
             <textarea class="form-control monospaced-font computed-result" rows="3" v-model="computedResult"></textarea>
         </div>
-        <hr>
+        <pre class="number-system-convert-result">
+ 2进制:  {{ selectedTo2 }}
+ 8进制:  {{ selectedTo8 }}
+10进制:  {{ selectedTo10 }}
+16进制:  {{ selectedTo16 }}</pre>
     </div>
+
 
 
 </div>
